--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,29 @@ Wall-A project/Library/shadercompiler-UnityShaderCompiler.exe8.log
 Wall-A project/Library/SourceAssetDB
 Wall-A project/Library/StateCache/Hierarchy/9a3477-mainStage.json
 Wall-A project/Library/StateCache/SceneView/1273c1-mainStage.json
+Wall-A project/Assets/Prefab Brush/activeSave.asset
+Wall-A project/Assets/Prefab Brush/activeSave.asset.meta
+Wall-A project/Assets/Prefab Brush/Documentation.meta
+Wall-A project/Assets/Prefab Brush/Documentation/Prefab Brush+ 1.3.X Documentation.pdf
+Wall-A project/Assets/Prefab Brush/Documentation/Prefab Brush+ 1.3.X Documentation.pdf.meta
+Wall-A project/Assets/Prefab Brush/Resources.meta
+Wall-A project/Assets/Prefab Brush/Resources/PB_Button_Off.gif
+Wall-A project/Assets/Prefab Brush/Resources/PB_Button_Off.gif.meta
+Wall-A project/Assets/Prefab Brush/Resources/PB_Button_On.gif
+Wall-A project/Assets/Prefab Brush/Resources/PB_Button_On.gif.meta
+Wall-A project/Assets/Prefab Brush/Resources/PB_Icon.png
+Wall-A project/Assets/Prefab Brush/Resources/PB_Icon.png.meta
+Wall-A project/Assets/Prefab Brush/SaveFiles.meta
+Wall-A project/Assets/Prefab Brush/SaveFiles/Defualt.asset
+Wall-A project/Assets/Prefab Brush/SaveFiles/Defualt.asset.meta
+Wall-A project/Assets/Prefab Brush/Scripts.meta
+Wall-A project/Assets/Prefab Brush/Scripts/Editor.meta
+Wall-A project/Assets/Prefab Brush/Scripts/Editor/PrefabBrush.cs
+Wall-A project/Assets/Prefab Brush/Scripts/Editor/PrefabBrush.cs.meta
+Wall-A project/Assets/Prefab Brush/Scripts/PB_Enums.cs
+Wall-A project/Assets/Prefab Brush/Scripts/PB_Enums.cs.meta
+Wall-A project/Assets/Prefab Brush/Scripts/PB_PrefabData.cs
+Wall-A project/Assets/Prefab Brush/Scripts/PB_PrefabData.cs.meta
+Wall-A project/Assets/Prefab Brush/Scripts/PB_SaveObject.cs
+Wall-A project/Assets/Prefab Brush/Scripts/PB_SaveObject.cs.meta
+Wall-A project/Assets/Prefab Brush.meta
